--- a/miduoyuan.com/fuwuyuan/index_f1.html
+++ b/miduoyuan.com/fuwuyuan/index_f1.html
@@ -34,7 +34,7 @@ a:link {
   <p>　　2、<strong><a href="http://miduoyuan.com/fuwuyuan/kulu_doc/002-9yiBiau%5B60%5D.mp3.zip" target="_self">九陰瑜珈標準型60分鐘<img src="kulu_doc/023.jpg" width="23" height="23" /> </a></strong></p>
   <p>適用於身體較好者。功效，增加生命能量，排病氣，通靈。</p>
   
-  <p>　　3、<strong><a href="kulu_doc/003-9yiJian%5B60%5D.mp3.zip" target="_self">九陰瑜珈強化簡式60分鐘<img src="kulu_doc/023.jpg" alt="" width="23" height="23" /></a></strong> </p>
+  <p>　　3、<strong><a href="http://miduoyuan.com/fuwuyuan/kulu_doc/003-9yiJian%5B60%5D.mp3.zip" target="_self">九陰瑜珈強化簡式60分鐘<img src="kulu_doc/023.jpg" alt="" width="23" height="23" /></a></strong> </p>
   <p>適用於有多年煉功基礎者。功效，產生光爆，補充天魂的能量，通靈，上層次。</p>
   
   <p>　　4、<strong><a href="http://miduoyuan.com/fuwuyuan/kulu_doc/004-9yiTuanlin%5B90%5D.mp3.zip"target="_self">九陰瑜珈通靈型90分鐘<img src="kulu_doc/023.jpg" alt="" width="23" height="23" /></a></strong> </p>
